feat: Watchlist Scanner fallback — seans kapalıyken son fiyatlar
- TradingViewScreenerClient fallback enrichment eklendi
- QuotePriceCache boşsa Scanner API'den close/change/logoid çekilir
- Batch scan: sadece fiyatı null olan hisseler için tek istek
- Graceful degradation: screenerClient null ise skip